--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A lightweight offline code editor with syntax highlighting and formatting">
+    <!-- Set this to your Worker base URL when not on the same origin, e.g. https://editor-live-share.your-subdomain.workers.dev -->
+    <meta name="live-share-base" content="https://editor-live-share-api.sanjaysingh.net">
     <title>Offline Code Editor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -28,14 +30,42 @@
             <select id="theme-select" aria-label="Select Theme">
                 <!-- Theme options will be populated by JavaScript -->
             </select>
+            <button id="start-share-btn" aria-label="Start Live Share">Start Live Share</button>
+            <button id="join-share-btn" aria-label="Join Session">Join Session</button>
+            <button id="stop-share-btn" aria-label="Stop Live Share" style="display:none">Stop</button>
         </nav>
     </header>
     <main id="editor-container" role="application" aria-label="Code Editor"></main>
+    <div id="live-indicator" class="live-indicator" style="display:none"></div>
     <div id="drop-zone" aria-hidden="true">
         <div id="drop-zone-text">Drop file here to open</div>
     </div>
 
+    <div id="share-modal" class="modal" style="display:none">
+      <div class="modal-content">
+        <h3>Live Share Started</h3>
+        <p>Session key: <strong id="share-key"></strong></p>
+        <input id="share-link" readonly>
+        <div class="modal-actions">
+          <button id="copy-link-btn">Copy Link</button>
+          <button id="close-modal-btn">Close</button>
+        </div>
+      </div>
+    </div>
+
+    <div id="join-modal" class="modal" style="display:none">
+      <div class="modal-content">
+        <h3>Join Session</h3>
+        <input id="join-key-input" placeholder="ABC-234" maxlength="7">
+        <div class="modal-actions">
+          <button id="join-confirm-btn">Join</button>
+          <button id="join-cancel-btn">Cancel</button>
+        </div>
+      </div>
+    </div>
+
     <script src="app.js"></script>
+    <script src="live-share.js"></script>
 </body>
 
 </html>
