UI enhancements for live share

--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
             <select id="theme-select" aria-label="Select Theme">
                 <!-- Theme options will be populated by JavaScript -->
             </select>
-            <button id="start-share-btn" aria-label="Start Live Share">Start Live Share</button>
-            <button id="join-share-btn" aria-label="Join Session">Join Session</button>
-            <button id="stop-share-btn" aria-label="Stop Live Share" style="display:none">Stop</button>
+            <button id="start-share-btn" aria-label="Start Live Share" title="Start Live Share">
+                <i class="fas fa-signal"></i>
+            </button>
+            <button id="join-share-btn" aria-label="Join Session" title="Join Session">
+                <i class="fas fa-link"></i>
+            </button>
+            <button id="stop-share-btn" aria-label="Stop Live Share" title="Stop Live Share" style="display:none">
+                <i class="fas fa-stop-circle"></i>
+            </button>
         </nav>
     </header>
     <main id="editor-container" role="application" aria-label="Code Editor"></main>
