make join session easier

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="join-modal" class="modal" style="display:none">
       <div class="modal-content">
         <h3>Join Session</h3>
-        <input id="join-key-input" placeholder="ABC-234" maxlength="7">
+        <input id="join-key-input" placeholder="ABC234" maxlength="7" inputmode="latin" autocomplete="off" autocapitalize="characters">
         <div class="modal-actions">
           <button id="join-confirm-btn">Join</button>
           <button id="join-cancel-btn">Cancel</button>
