--- a/index.html
+++ b/index.html
@@ -30,14 +30,8 @@
             <select id="theme-select" aria-label="Select Theme">
                 <!-- Theme options will be populated by JavaScript -->
             </select>
-            <button id="start-share-btn" aria-label="Start Live Share" title="Start Live Share">
+            <button id="live-share-menu-btn" aria-label="Live Share" title="Live Share">
                 <i class="fas fa-signal"></i>
-            </button>
-            <button id="join-share-btn" aria-label="Join Session" title="Join Session">
-                <i class="fas fa-link"></i>
-            </button>
-            <button id="stop-share-btn" aria-label="Stop Live Share" title="Stop Live Share" style="display:none">
-                <i class="fas fa-stop-circle"></i>
             </button>
         </nav>
     </header>
